# simple-java-launcher

./: .gitignore  LICENSE  README.md  settings.gradle.kts
examples/gui-app/: build.gradle.kts  config.yml  settings.gradle.kts
examples/headless-app/: .gitignore  build.gradle.kts  config.yml  settings.gradle.kts
examples/headless-app/config/: config.yml
examples/headless-app/webapp/: index.html  script.js
gradle-plugin/: build.gradle.kts
gradle-plugins/updater/: .gitignore  settings.gradle.kts
launcher/: build.gradle.kts  settings.gradle.kts
native/SampleService/SampleService/: SampleService.sln  SampleService.vcproj  SampleService.vcxproj  SampleService.vcxproj.filters  SampleServiceMain.cpp  UpgradeLog.htm
native/gui/: .gitignore  CMakeLists.txt  sjl.cpp
native/service-base-master/: ServiceInstaller.cpp
native/service-base-master/sample-service/: sample-service.vcxproj
native/shared/: CMakeLists.txt  configuration.cpp  configuration.h  launcher_data.cpp  launcher_data.h  main.cpp  utils.cpp  utils.h
native/shared/libs/: properties.hpp
native/unix-headless/: CMakeLists.txt  sjl.cpp
native/windows-service/: SjlService.cpp  SjlService.h  config.yml  event_ids.h  main.cpp  resource.h  windows-service.aps  windows-service.sln  windows-service.vcxproj  windows-service.vcxproj.filters
native/windows-service/libs/: ServiceBase.cpp  ServiceInstaller.cpp  ServiceInstaller.h
updater/: build.gradle.kts  config.yml  settings.gradle.kts
wrappers/: .gitignore  go.work
wrappers/common/: go.mod  go.sum
wrappers/unix_headless/: go.mod
(+80 files in other folders)
